<resources>
    <string name="app_name">Клієнт ДМТК</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="site_dmtc">dmtc.org.ua</string>


    <!-- Налаштування -->
    <string name="opentotification">Вкл сповіщення</string>
    <string name="exitnotification">Викл сповіщення</string>
    <string name="title_note">Сповіщення</string>
    <string name="pref_color">Колір</string>
    <string name="title_activity_email_password">Sign in</string>

    <!-- Інформація про коледж-->
    <string name="friends">Співпраця</string>
    <string name="contacts">Контакти</string>
    <string name="telephone">(03244) 3-52-06</string>
    <string name="email">monudmt@ukr.net</string>
    <string name="adress_dmtc">м. Дрогобич, вул. Раневицька 12</string>
    <string name="dmtc">ДРОГОБИЦЬКИЙ МЕХАНІКО-ТЕХНОЛОГІЧНИЙ КОЛЕДЖ</string>
    <string name="cont">Контакти</string>
    <string name="kor_pos">Корисні посиланння</string>
    <string name="spivp">Співпраця</string>
    <string name="adress">Адреса</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_registr">Реєстрація</string>
    <string name="action_sign">Автентифікація</string>
    <string name="action_sign_student">Ввійти як студент</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
