<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.latsykroman.dmtc.AutActivity"
    tools:ignore="ContentDescription">

    <EditText
        android:id="@+id/editemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="14"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editemail"
        android:layout_alignStart="@+id/editemail"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="16dp"
        android:text="@string/prompt_email"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editpassword"
        android:layout_alignStart="@+id/editpassword"
        android:layout_below="@+id/editemail"
        android:layout_marginTop="25dp"
        android:text="@string/prompt_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editemail"
        android:layout_alignStart="@+id/editemail"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="32dp"
        android:ems="14"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/app_name"
        android:textSize="43sp" />

    <Button
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="@color/colorPrimary"
        android:ems="18"
        android:text="@string/action_sign" />

    <Button
        android:id="@+id/registr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sign"
        android:layout_alignRight="@+id/sign"
        android:layout_below="@+id/sign"
        android:layout_marginTop="11dp"
        android:background="@color/colorPrimary"
        android:ems="18"
        android:text="@string/action_registr" />

    <Button
        android:id="@+id/sign_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        android:text="@string/action_sign_student"
        />

</RelativeLayout>
