<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.latsykroman.dmtc.AboutCollege"
    tools:ignore="ContentDescription">


    <ImageButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/viewFlipper"
        android:layout_marginBottom="39dp"
        android:layout_toEndOf="@+id/viewFlipper2"
        android:layout_toRightOf="@+id/viewFlipper2"
        app:srcCompat="@drawable/stilka" />

    <ImageButton
        android:id="@+id/prevs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/next"
        android:layout_toLeftOf="@+id/viewFlipper2"
        android:layout_toStartOf="@+id/viewFlipper2"
        app:srcCompat="@drawable/srilka2" />


    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Співпраця"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/tney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:visibility="invisible"
            app:srcCompat="@drawable/tney" />

        <ImageButton
            android:id="@+id/ntny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:visibility="invisible"
            app:srcCompat="@drawable/tnty" />

        <ImageButton
            android:id="@+id/politeh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/politeh" />

        <ImageButton
            android:id="@+id/nty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/nty" />


    </ViewFlipper>

    <TextView
        android:id="@+id/Співпраця"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/viewFlipper2"
        android:text="@string/spivp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ViewFlipper
        android:id="@+id/viewFlipper2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true">


        <ImageButton
            android:id="@+id/min_osv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colortransperant"
            app:srcCompat="@drawable/mon_logo" />

        <ImageButton
            android:id="@+id/dmtc_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/dmtc_logo" />

        <ImageButton
            android:id="@+id/ugl_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:background="@color/colortransperant"
            app:srcCompat="@drawable/ugl" />

        <ImageButton
            android:id="@+id/osp_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colortransperant"
            app:srcCompat="@drawable/osp_logo" />

        <ImageButton
            android:id="@+id/ped_press_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colortransperant"
            app:srcCompat="@drawable/logo_pedpresa2" />

    </ViewFlipper>

    <ImageButton
        android:id="@+id/next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/viewFlipper2"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/viewFlipper2"
        android:layout_toRightOf="@+id/viewFlipper2"
        app:srcCompat="@drawable/stilka" />

    <ImageButton
        android:id="@+id/prevs1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prevs"
        android:layout_alignStart="@+id/prevs"
        android:layout_alignTop="@+id/next1"
        app:srcCompat="@drawable/srilka2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView6"
        android:text="@string/kor_pos"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cont"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5"
        android:layout_below="@+id/textView6"
        android:text="@string/adress"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prevs1"
        android:layout_alignStart="@+id/prevs1"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="18dp"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5"
        android:layout_below="@+id/imageView5"
        android:layout_marginTop="17dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:text="@string/adress_dmtc"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView6"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:text="@string/telephone"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView6"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:textStyle="italic"
        android:text="@string/email"
        android:textSize="20sp"
        android:autoLink="email"/>



</RelativeLayout>
